--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <img data-src="images/Portafolio-Editable-01-LOVE.png" alt="Sección 1">
     </section>
     <section id="seccion2" class="section">
-        <img data-src="imagenes/Final-Hola Soy Charlie.png" alt="Sección 2">
+        <img data-src="images/Final-Hola Soy Charlie.png" alt="Sección 2">
     </section>
     
     <section id="seccion3" class="section">
@@ -196,6 +196,7 @@
     </script>
 </body>
 </html>
+
 
 
 
