--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
         <img data-src="images/Portafolio-Editable-01-LOVE.png" alt="Sección 1">
     </section>
     <section id="seccion2" class="section">
-        <img data-src="Final-Hola Soy Charlie.png" alt="Sección 2">
+        <img data-src="images/Final-Hola Soy Charlie.png" alt="Sección 2">
     </section>
     
     <section id="seccion3" class="section">
-      <img data-src="SM - 1.png" alt="Sección 3">
+      <img data-src="images/SM - 1.png" alt="Sección 3">
     </section>
     
     <section class="video-section">
@@ -196,5 +196,6 @@
     </script>
 </body>
 </html>
+
 
 
