--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </section>
     
     <section id="seccion2" class="section">
-        <img data-src="images/Hola Soy Charlie-HD.png" alt="Sección 2">
+        <img data-src="images/HolaSoyCharlie-Final-02.png" alt="Sección 2">
     </section>
     
     <section id="seccion3" class="section">
@@ -199,6 +199,7 @@
     </script>
 </body>
 </html>
+
 
 
 
