--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <img data-src="images/SM - 3.png" alt="Sección 4">
     </section>    
     
-        <img data-src="images/SM - 4.png" alt="Sección 5">
+        <img data-src="images/SM-5-05.png" alt="Sección 5">
     </section>
     
     <section id="seccion5" class="section">
@@ -199,6 +199,7 @@
     </script>
 </body>
 </html>
+
 
 
 
