--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
         <img data-src="images/SM - 3.png" alt="Sección 4">
     </section>    
     
-        <img data-src="images/SM-5-05.png" alt="Sección 5">
-    </section>
+ <section id="seccion4" class="section">
+        <img data-src="images/SM-5-05.png" alt="Sección 4">
+    </section>   
 
 
     <section id="seccion5" class="section">
@@ -200,6 +201,7 @@
     </script>
 </body>
 </html>
+
 
 
 
